Fixed 4 Bugs： 1. issuer's public key can not wrap in my asset list; 2. private key  show/hide animation bug; 3. adjust UI in create multisign contract; 4. adjust UI in vote tab.

--- a/AntSharesApp/www/css/site.css
+++ b/AntSharesApp/www/css/site.css
@@ -84,7 +84,7 @@ ul, ol { padding-left: 0 !important; list-style: none !important; }
 pre { white-space: pre-line; user-select: text; -ms-user-select: text; -moz-user-select: text; -webkit-user-select: text; }
 .select { user-select: text; -ms-user-select: text; -moz-user-select: text; -webkit-user-select: text; }
 .change-wallet-name { padding-top: 7px; color: #337ab7; }
-.issuer { margin-bottom: 10px; }
+.issuer { margin-bottom: 10px; word-break:break-all }
 .all-coin { height: 150px; margin-top: 10px; line-height: 1.5; display: none; }
 textarea.pre { display: block; outline:none; font-weight:bold; width:100%; padding: 9.5px; margin: 0 0 10px; font-size: 13px; line-height: 1.42857143; color: #333; word-break: break-all; word-wrap: break-word; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px; }
 .alert-info.bottom { position:fixed; bottom:50px; margin: 0 50px 20px 0 }
